[package]
categories = ["network-programming", "asynchronous"]
description = """
Codegen module of `transport` (of `tonic`) gRPC implementation.
"""
documentation = "https://docs.rs/tonic-build/0.12.1"
edition = "2021"
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]
license = "MIT"
name = "transport-build"
readme = "README.md"
version = "0.12.1"

[dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
prost-build = { version = "0.13", optional = true }
quote = "1.0"
syn = "2.0"

[features]
default = ["transport", "prost"]
prost = ["prost-build"]
cleanup-markdown = ["prost", "prost-build/cleanup-markdown"]
transport = []

[package.metadata.docs.rs]
all-features = true
