[package]
# Maybe should be named tonic-transport?
name = "transport"
categories = ["web-programming", "network-programming", "asynchronous"]
description = """
The transport module found in tonic v0.12.1.
Extracted to provide a base for exploration.
"""
edition = "2021"
homepage = "https://github.com/hyperium/tonic"
keywords = ["rpc", "grpc", "async", "futures", "protobuf"]
license = "MIT"
# For now at least in this main branch, follow the version of tonic that this depends on.
version = "0.12.1"

[features]
# As this *is* the transport crate, there is no "transport" feature.
# Replaced the default "transport" feature with the "server" and "channel" features it
# had been pulling in.
# The features "server" and "channel" will most likely be considered requirements
# so may be be removed as features altogether once this is compiling.
#
# Removed the "post" and "codegen" features. Not relevant to the transport.
default = ["server", "channel"]
full = ["server", "channel", "tls", "tls-roots", "tls-webpki-roots"]
tls = ["dep:rustls-pemfile", "dep:tokio-rustls", "dep:tokio", "tokio?/rt", "tokio?/macros"]
tls-roots = ["tls", "channel", "dep:rustls-native-certs"]
tls-webpki-roots = ["tls", "channel", "dep:webpki-roots"]
router = ["dep:axum", "dep:tower", "tower?/util"]
server = [
  "router",
  "dep:async-stream",
  "dep:h2",
  "dep:hyper", "hyper?/server",
  "dep:hyper-util", "hyper-util?/service", "hyper-util?/server-auto",
  "dep:socket2",
  "dep:tokio", "tokio?/macros", "tokio?/net", "tokio?/time",
  "tokio-stream/net",
  "dep:tower", "tower?/util", "tower?/limit",
]
channel = [
  "dep:hyper", "hyper?/client",
  "dep:hyper-util", "hyper-util?/client-legacy",
  "dep:tower", "tower?/balance", "tower?/buffer", "tower?/discover", "tower?/limit",
  "dep:tokio", "tokio?/time",
  "dep:hyper-timeout",
]

[dependencies]
# Remember to change the tonic version of the transport/examples/Cargo.toml too.
# tonic = { version = "0.12.1", features = ["codegen", "prost", "gzip"] }
tonic = { path = "../tonic", features = ["codegen", "prost", "gzip"] }

bytes = "1.0"
http = "1"
tracing = "0.1"

http-body = "1"
http-body-util = "0.1"
pin-project = "1.0.11"
tower-service = "0.3"
tokio-stream = {version = "0.1", default-features = false}

# transport
async-stream = {version = "0.3", optional = true}
h2 = {version = "0.4", optional = true}
hyper = {version = "1", features = ["http1", "http2"], optional = true}
hyper-util = { version = "0.1.4", features = ["tokio"], optional = true }
socket2 = { version = "0.5", optional = true, features = ["all"] }
tokio = {version = "1", default-features = false, optional = true}
tower = {version = "0.4.7", default-features = false, optional = true}
axum = {version = "0.7", default-features = false, optional = true}

# rustls
rustls-pemfile = { version = "2.0", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"], optional = true }
webpki-roots = { version = "0.26", optional = true }

# channel
hyper-timeout = {version = "0.5", optional = true}

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tower = {version = "0.4.7", features = ["full"]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
